--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,16 +5,17 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.3.7",
+    "@mui/icons-material": "^7.3.8",
     "@mui/lab": "^7.0.1-beta.21",
-    "@mui/material": "^7.3.7",
+    "@mui/material": "^7.3.8",
     "@mui/x-data-grid": "^8.27.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.13.4",
+    "axios": "^1.13.5",
     "date-fns": "^4.1.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
